fix: fix index array out of bounds

--- a/src/app/modules/form/components/form/form.component.scss
+++ b/src/app/modules/form/components/form/form.component.scss
@@ -2,6 +2,7 @@
 .quiz-form {
   @extend .flex-center;
   height: 100%;
+  overflow: hidden;
   &__form {
     display: flex;
     flex-direction: column;
