--- a/src/app/modules/summary/components/summary-list/summary-list.component.scss
+++ b/src/app/modules/summary/components/summary-list/summary-list.component.scss
@@ -4,7 +4,7 @@
 .summary-list {
   @extend .flex-center;
   flex-direction: column;
-
+  overflow: hidden;
   &__result {
     font-size: 2rem;
     line-height: 120%;
